Created UIHwi0 to handle touch input and initialize screen and touch

--- a/VehicleMotorSystem/empty_min.cfg
+++ b/VehicleMotorSystem/empty_min.cfg
@@ -549,3 +549,6 @@ driversConfig.libType = driversConfig.LibType_NonInstrumented;
 
 
 /* ================ Application Specific Instances ================ */
+var halHwi0Params = new halHwi.Params();
+halHwi0Params.instance.name = "UIHwi0";
+Program.global.UIHwi0 = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
