--- a/VehicleMotorSystem/src/makefile.libs
+++ b/VehicleMotorSystem/src/makefile.libs
@@ -1,6 +1,6 @@
 #
 # This file was generated based on the configuration script:
-#     C:\Users\Mark\repos\egh456_assignment\VehicleMotorSystem\VehicleMotorSystem\empty_min.cfg
+#     C:\Users\Mark\repos\egh456_assignment\VehicleMotorSystem\VehicleMotorSystem\VehicleMotorSystem.cfg
 #
 # This makefile may be included in other makefiles that need to build
 # the libraries containing the compiled source files generated as
