--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -552,3 +552,6 @@ driversConfig.libType = driversConfig.LibType_NonInstrumented;
 var halHwi0Params = new halHwi.Params();
 halHwi0Params.instance.name = "UIHwi0";
 Program.global.UIHwi0 = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
+var task0Params = new Task.Params();
+task0Params.instance.name = "UItask";
+Program.global.UItask = Task.create("&UiStart", task0Params);
