--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -35,6 +35,7 @@
 /* ================ Clock configuration ================ */
 var Clock = xdc.useModule('ti.sysbios.knl.Clock');
 var GateTask = xdc.useModule('ti.sysbios.gates.GateTask');
+var Event = xdc.useModule('ti.sysbios.knl.Event');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
@@ -555,9 +556,13 @@ halHwi0Params.instance.name = "UIHwi0";
 Program.global.UIHwi0 = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
 var task0Params = new Task.Params();
 task0Params.instance.name = "UItask";
-task0Params.priority = 5;
+task0Params.priority = 10;
 Program.global.UItask = Task.create("&UiStart", task0Params);
+var semaphore0Params = new Semaphore.Params();
+semaphore0Params.instance.name = "semScreen";
+semaphore0Params.mode = Semaphore.Mode_BINARY;
+Program.global.semScreen = Semaphore.create(1, semaphore0Params);
 var task1Params = new Task.Params();
 task1Params.instance.name = "Timetask";
-task1Params.priority = 5;
+task1Params.priority = 6;
 Program.global.Timetask = Task.create("&UpdateTime", task1Params);
