Implemented keep track of time and display calendar time

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -552,17 +552,16 @@ driversConfig.libType = driversConfig.LibType_NonInstrumented;
 
 /* ================ Application Specific Instances ================ */
 var halHwi0Params = new halHwi.Params();
-halHwi0Params.instance.name = "UIHwi0";
-Program.global.UIHwi0 = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
+halHwi0Params.instance.name = "UIHwi";
+Program.global.UIHwi = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
 var task0Params = new Task.Params();
 task0Params.instance.name = "UItask";
 task0Params.priority = 10;
 Program.global.UItask = Task.create("&UiStart", task0Params);
-var semaphore0Params = new Semaphore.Params();
-semaphore0Params.instance.name = "semScreen";
-semaphore0Params.mode = Semaphore.Mode_BINARY;
-Program.global.semScreen = Semaphore.create(1, semaphore0Params);
 var task1Params = new Task.Params();
 task1Params.instance.name = "Timetask";
 task1Params.priority = 6;
 Program.global.Timetask = Task.create("&UpdateTime", task1Params);
+var semaphore0Params = new Semaphore.Params();
+semaphore0Params.instance.name = "Timesem";
+Program.global.Timesem = Semaphore.create(1, semaphore0Params);
