--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -563,5 +563,8 @@ task1Params.instance.name = "Timetask";
 task1Params.priority = 6;
 Program.global.Timetask = Task.create("&UpdateTime", task1Params);
 var semaphore0Params = new Semaphore.Params();
-semaphore0Params.instance.name = "Timesem";
-Program.global.Timesem = Semaphore.create(1, semaphore0Params);
+semaphore0Params.instance.name = "semTime";
+Program.global.semTime = Semaphore.create(1, semaphore0Params);
+var semaphore1Params = new Semaphore.Params();
+semaphore1Params.instance.name = "semMotorSpeed";
+Program.global.semMotorSpeed = Semaphore.create(1, semaphore1Params);
