--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -566,5 +566,14 @@ var semaphore0Params = new Semaphore.Params();
 semaphore0Params.instance.name = "semTime";
 Program.global.semTime = Semaphore.create(1, semaphore0Params);
 var semaphore1Params = new Semaphore.Params();
-semaphore1Params.instance.name = "semMotorSpeed";
-Program.global.semMotorSpeed = Semaphore.create(1, semaphore1Params);
+semaphore1Params.instance.name = "semSpeedLimit";
+Program.global.semSpeedLimit = Semaphore.create(1, semaphore1Params);
+var semaphore2Params = new Semaphore.Params();
+semaphore2Params.instance.name = "semAccelerationLimit";
+Program.global.semAccelerationLimit = Semaphore.create(1, semaphore2Params);
+var semaphore3Params = new Semaphore.Params();
+semaphore3Params.instance.name = "semCurrentLimit";
+Program.global.semCurrentLimit = Semaphore.create(1, semaphore3Params);
+var semaphore4Params = new Semaphore.Params();
+semaphore4Params.instance.name = "semTempLimit";
+Program.global.semTempLimit = Semaphore.create(1, semaphore4Params);
