Add: library files for motor spinning (stuff)

--- a/VehicleMotorSystem/.settings/org.eclipse.core.resources.prefs
+++ b/VehicleMotorSystem/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//Debug/Drivers/subdir_rules.mk=UTF-8
 encoding//Debug/Drivers/subdir_vars.mk=UTF-8
+encoding//Debug/MotorLibrary/subdir_rules.mk=UTF-8
+encoding//Debug/MotorLibrary/subdir_vars.mk=UTF-8
 encoding//Debug/UI/subdir_rules.mk=UTF-8
 encoding//Debug/UI/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
