--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -548,8 +548,6 @@ var driversConfig = xdc.useModule('ti.drivers.Config');
 driversConfig.libType = driversConfig.LibType_NonInstrumented;
 //driversConfig.libType = driversConfig.LibType_Instrumented;
 
-
-
 /* ================ Application Specific Instances ================ */
 var halHwi0Params = new halHwi.Params();
 halHwi0Params.instance.name = "UIHwi";
@@ -577,3 +575,6 @@ Program.global.semCurrentLimit = Semaphore.create(1, semaphore3Params);
 var semaphore4Params = new Semaphore.Params();
 semaphore4Params.instance.name = "semTempLimit";
 Program.global.semTempLimit = Semaphore.create(1, semaphore4Params);
+
+// Neco: added
+Clock.timerId = 2;
