--- a/VehicleMotorSystem/.project
+++ b/VehicleMotorSystem/.project
@@ -25,4 +25,11 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>utils/MotorLib.lib</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/MotorLibrary/MotorLib.lib</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
