--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -578,3 +578,12 @@ Program.global.semTempLimit = Semaphore.create(1, semaphore4Params);
 
 // Neco: added
 Clock.timerId = 2;
+var halHwi1Params = new halHwi.Params();
+halHwi1Params.instance.name = "HWIHallA";
+Program.global.HWIHallA = halHwi.create(88, "&ISRHall", halHwi1Params);
+var halHwi2Params = new halHwi.Params();
+halHwi2Params.instance.name = "HWIHallB";
+Program.global.HWIHallB = halHwi.create(48, "&ISRHall", halHwi2Params);
+var halHwi3Params = new halHwi.Params();
+halHwi3Params.instance.name = "HWIHallC";
+Program.global.HWIHallC = halHwi.create(89, "&ISRHall", halHwi3Params);
