--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -587,3 +587,9 @@ Program.global.HWIHallB = halHwi.create(48, "&ISRHall", halHwi2Params);
 var halHwi3Params = new halHwi.Params();
 halHwi3Params.instance.name = "HWIHallC";
 Program.global.HWIHallC = halHwi.create(89, "&ISRHall", halHwi3Params);
+var task2Params = new Task.Params();
+task2Params.instance.name = "initMotorTask";
+Program.global.initMotorTask = Task.create("&initMotor", task2Params);
+var event0Params = new Event.Params();
+event0Params.instance.name = "updateMotor";
+Program.global.updateMotor = Event.create(event0Params);
