Update: fixed motor event handle

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -591,5 +591,5 @@ var task2Params = new Task.Params();
 task2Params.instance.name = "initMotorTask";
 Program.global.initMotorTask = Task.create("&initMotor", task2Params);
 var event0Params = new Event.Params();
-event0Params.instance.name = "updateMotor";
-Program.global.updateMotor = Event.create(event0Params);
+event0Params.instance.name = "EventUpdateMotor";
+Program.global.EventUpdateMotor = Event.create(event0Params);
