--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -590,6 +590,9 @@ Program.global.HWIHallC = halHwi.create(89, "&ISRHall", halHwi3Params);
 var task2Params = new Task.Params();
 task2Params.instance.name = "initMotorTask";
 Program.global.initMotorTask = Task.create("&initMotor", task2Params);
-var event0Params = new Event.Params();
-event0Params.instance.name = "EventUpdateMotor";
-Program.global.EventUpdateMotor = Event.create(event0Params);
+var swi0Params = new Swi.Params();
+swi0Params.instance.name = "motorStart";
+Program.global.motorStart = Swi.create("&SWIstartMotor", swi0Params);
+var swi1Params = new Swi.Params();
+swi1Params.instance.name = "motorStop";
+Program.global.motorStop = Swi.create("&SWIstopMotor", swi1Params);
