Changed to use Seconds_get

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -596,3 +596,5 @@ Program.global.motorStart = Swi.create("&SWIstartMotor", swi0Params);
 var swi1Params = new Swi.Params();
 swi1Params.instance.name = "motorStop";
 Program.global.motorStop = Swi.create("&SWIstopMotor", swi1Params);
+
+var ti_sysbios_hal_Seconds = xdc.useModule('ti.sysbios.hal.Seconds');
