Add (caution): motor set PWM (motor doesn't start)

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -36,6 +36,7 @@
 var Clock = xdc.useModule('ti.sysbios.knl.Clock');
 var GateTask = xdc.useModule('ti.sysbios.gates.GateTask');
 var Event = xdc.useModule('ti.sysbios.knl.Event');
+var Timer = xdc.useModule('ti.sysbios.hal.Timer');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
@@ -596,3 +597,7 @@ Program.global.motorStart = Swi.create("&SWIstartMotor", swi0Params);
 var swi1Params = new Swi.Params();
 swi1Params.instance.name = "motorStop";
 Program.global.motorStop = Swi.create("&SWIstopMotor", swi1Params);
+var timer0Params = new Timer.Params();
+timer0Params.instance.name = "HandleTimerRPM";
+timer0Params.period = 100000;
+Program.global.HandleTimerRPM = Timer.create(4, "&timerRPM", timer0Params);
