--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -565,8 +565,8 @@ var semaphore0Params = new Semaphore.Params();
 semaphore0Params.instance.name = "semTime";
 Program.global.semTime = Semaphore.create(1, semaphore0Params);
 var semaphore1Params = new Semaphore.Params();
-semaphore1Params.instance.name = "semSpeedLimit";
-Program.global.semSpeedLimit = Semaphore.create(1, semaphore1Params);
+semaphore1Params.instance.name = "semDutyScreen";
+Program.global.semDutyScreen = Semaphore.create(1, semaphore1Params);
 var semaphore2Params = new Semaphore.Params();
 semaphore2Params.instance.name = "semAccelerationLimit";
 Program.global.semAccelerationLimit = Semaphore.create(1, semaphore2Params);
@@ -601,3 +601,9 @@ var timer0Params = new Timer.Params();
 timer0Params.instance.name = "HandleTimerRPM";
 timer0Params.period = 100000;
 Program.global.HandleTimerRPM = Timer.create(4, "&timerRPM", timer0Params);
+var semaphore5Params = new Semaphore.Params();
+semaphore5Params.instance.name = "semDutyMotor";
+Program.global.semDutyMotor = Semaphore.create(1, semaphore5Params);
+var semaphore6Params = new Semaphore.Params();
+semaphore6Params.instance.name = "semDutyError";
+Program.global.semDutyError = Semaphore.create(1, semaphore6Params);
