Added I2C and Light Sensing
Light Values are represented in both an Array of the previous 30 and a single volatile integer

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -37,6 +37,7 @@ var Clock = xdc.useModule('ti.sysbios.knl.Clock');
 var GateTask = xdc.useModule('ti.sysbios.gates.GateTask');
 var Event = xdc.useModule('ti.sysbios.knl.Event');
 var Timer = xdc.useModule('ti.sysbios.hal.Timer');
+var GIO = xdc.useModule('ti.sysbios.io.GIO');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
@@ -558,9 +559,9 @@ task0Params.instance.name = "UItask";
 task0Params.priority = 10;
 Program.global.UItask = Task.create("&UiStart", task0Params);
 var task1Params = new Task.Params();
-task1Params.instance.name = "Timetask";
+task1Params.instance.name = "TimeTask";
 task1Params.priority = 6;
-Program.global.Timetask = Task.create("&UpdateTime", task1Params);
+Program.global.TimeTask = Task.create("&UpdateTime", task1Params);
 var semaphore0Params = new Semaphore.Params();
 semaphore0Params.instance.name = "semTime";
 Program.global.semTime = Semaphore.create(1, semaphore0Params);
@@ -604,3 +605,10 @@ Program.global.semDutyMotor = Semaphore.create(1, semaphore5Params);
 var semaphore6Params = new Semaphore.Params();
 semaphore6Params.instance.name = "semDutyError";
 Program.global.semDutyError = Semaphore.create(1, semaphore6Params);
+var task3Params = new Task.Params();
+task3Params.instance.name = "initSensing";
+task3Params.stackSize = 2048;
+Program.global.initSensing = Task.create("&setupI2C", task3Params);
+var task4Params = new Task.Params();
+task4Params.instance.name = "OPT3001Read";
+Program.global.OPT3001Read = Task.create("&readOPT3001", task4Params);
