--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -556,11 +556,11 @@ halHwi0Params.instance.name = "UIHwi";
 Program.global.UIHwi = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
 var task0Params = new Task.Params();
 task0Params.instance.name = "UItask";
-task0Params.priority = 10;
+task0Params.priority = 1;
 Program.global.UItask = Task.create("&UiStart", task0Params);
 var task1Params = new Task.Params();
 task1Params.instance.name = "TimeTask";
-task1Params.priority = 6;
+task1Params.priority = 1;
 Program.global.TimeTask = Task.create("&UpdateTime", task1Params);
 var semaphore0Params = new Semaphore.Params();
 semaphore0Params.instance.name = "semTime";
@@ -591,6 +591,7 @@ halHwi3Params.instance.name = "HWIHallC";
 Program.global.HWIHallC = halHwi.create(89, "&ISRHall", halHwi3Params);
 var task2Params = new Task.Params();
 task2Params.instance.name = "initMotorTask";
+task2Params.priority = 2;
 Program.global.initMotorTask = Task.create("&initMotor", task2Params);
 var swi0Params = new Swi.Params();
 swi0Params.instance.name = "motorStart";
@@ -608,7 +609,15 @@ Program.global.semDutyError = Semaphore.create(1, semaphore6Params);
 var task3Params = new Task.Params();
 task3Params.instance.name = "initSensing";
 task3Params.stackSize = 2048;
+task3Params.priority = 3;
 Program.global.initSensing = Task.create("&setupI2C", task3Params);
 var task4Params = new Task.Params();
 task4Params.instance.name = "OPT3001Read";
 Program.global.OPT3001Read = Task.create("&readOPT3001", task4Params);
+var task5Params = new Task.Params();
+task5Params.instance.name = "BMI160Read";
+Program.global.BMI160Read = Task.create("&readBMI160", task5Params);
+var semaphore7Params = new Semaphore.Params();
+semaphore7Params.instance.name = "semI2C";
+semaphore7Params.mode = Semaphore.Mode_BINARY;
+Program.global.semI2C = Semaphore.create(1, semaphore7Params);
