--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -556,11 +556,11 @@ halHwi0Params.instance.name = "UIHwi";
 Program.global.UIHwi = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params);
 var task0Params = new Task.Params();
 task0Params.instance.name = "UItask";
-task0Params.priority = 10;
+task0Params.priority = 5;
 Program.global.UItask = Task.create("&UiStart", task0Params);
 var task1Params = new Task.Params();
 task1Params.instance.name = "TimeTask";
-task1Params.priority = 6;
+task1Params.priority = 10;
 Program.global.TimeTask = Task.create("&UpdateTime", task1Params);
 var semaphore0Params = new Semaphore.Params();
 semaphore0Params.instance.name = "semTime";
@@ -591,6 +591,7 @@ halHwi3Params.instance.name = "HWIHallC";
 Program.global.HWIHallC = halHwi.create(89, "&ISRHall", halHwi3Params);
 var task2Params = new Task.Params();
 task2Params.instance.name = "initMotorTask";
+task2Params.priority = 14;
 Program.global.initMotorTask = Task.create("&initMotor", task2Params);
 var swi0Params = new Swi.Params();
 swi0Params.instance.name = "motorStart";
@@ -606,9 +607,19 @@ var semaphore6Params = new Semaphore.Params();
 semaphore6Params.instance.name = "semDutyError";
 Program.global.semDutyError = Semaphore.create(1, semaphore6Params);
 var task3Params = new Task.Params();
-task3Params.instance.name = "initSensing";
+task3Params.instance.name = "initI2C";
 task3Params.stackSize = 2048;
-Program.global.initSensing = Task.create("&setupI2C", task3Params);
+task3Params.priority = 14;
+Program.global.initI2C = Task.create("&setupI2C", task3Params);
 var task4Params = new Task.Params();
 task4Params.instance.name = "OPT3001Read";
+task4Params.priority = 8;
 Program.global.OPT3001Read = Task.create("&readOPT3001", task4Params);
+var task5Params = new Task.Params();
+task5Params.instance.name = "InitUART";
+task5Params.priority = 14;
+Program.global.InitUART = Task.create("&setupUART", task5Params);
+var task6Params = new Task.Params();
+task6Params.instance.name = "TMP107Read";
+task6Params.priority = 8;
+Program.global.TMP107Read = Task.create("&readTMP107", task6Params);
