--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -568,15 +568,6 @@ Program.global.semTime = Semaphore.create(1, semaphore0Params);
 var semaphore1Params = new Semaphore.Params();
 semaphore1Params.instance.name = "semDutyScreen";
 Program.global.semDutyScreen = Semaphore.create(1, semaphore1Params);
-var semaphore2Params = new Semaphore.Params();
-semaphore2Params.instance.name = "semAccelerationLimit";
-Program.global.semAccelerationLimit = Semaphore.create(1, semaphore2Params);
-var semaphore3Params = new Semaphore.Params();
-semaphore3Params.instance.name = "semCurrentLimit";
-Program.global.semCurrentLimit = Semaphore.create(1, semaphore3Params);
-var semaphore4Params = new Semaphore.Params();
-semaphore4Params.instance.name = "semTempLimit";
-Program.global.semTempLimit = Semaphore.create(1, semaphore4Params);
 
 // Neco: added
 Clock.timerId = 2;
@@ -616,10 +607,6 @@ task4Params.instance.name = "OPT3001Read";
 task4Params.priority = 8;
 Program.global.OPT3001Read = Task.create("&readOPT3001", task4Params);
 var task5Params = new Task.Params();
-task5Params.instance.name = "InitUART";
-task5Params.priority = 14;
-Program.global.InitUART = Task.create("&setupUART", task5Params);
-var task6Params = new Task.Params();
-task6Params.instance.name = "TMP107Read";
-task6Params.priority = 8;
-Program.global.TMP107Read = Task.create("&readTMP107", task6Params);
+task5Params.instance.name = "TMP107Task";
+task5Params.priority = 10;
+Program.global.TMP107Task = Task.create("&readTMP107", task5Params);
