--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -616,6 +616,7 @@ task4Params.instance.name = "OPT3001Read";
 Program.global.OPT3001Read = Task.create("&readOPT3001", task4Params);
 var task5Params = new Task.Params();
 task5Params.instance.name = "BMI160Read";
+task5Params.stackSize = 1024;
 Program.global.BMI160Read = Task.create("&readBMI160", task5Params);
 var semaphore7Params = new Semaphore.Params();
 semaphore7Params.instance.name = "semI2C";
