Added: Current sensor config

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -610,3 +610,7 @@ var task5Params = new Task.Params();
 task5Params.instance.name = "TMP107Task";
 task5Params.priority = 10;
 Program.global.TMP107Task = Task.create("&readTMP107", task5Params);
+var task6Params = new Task.Params();
+task6Params.instance.name = "InitADC";
+task6Params.priority = 14;
+Program.global.InitADC = Task.create("&SetupADC", task6Params);
