Add: buttons change plot variable

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -609,7 +609,6 @@ Program.global.OPT3001Read = Task.create("&readOPT3001", task4Params);
 var task5Params = new Task.Params();
 task5Params.instance.name = "BMI160Read";
 task5Params.stackSize = 1024;
-Program.global.BMI160Read = Task.create("&readBMI160", task5Params);
 var semaphore7Params = new Semaphore.Params();
 semaphore7Params.instance.name = "semI2C";
 semaphore7Params.mode = Semaphore.Mode_BINARY;
@@ -622,3 +621,9 @@ var task6Params = new Task.Params();
 task6Params.instance.name = "InitADC";
 task6Params.priority = 14;
 Program.global.InitADC = Task.create("&SetupADC", task6Params);
+var semaphore5Params0 = new Semaphore.Params();
+semaphore5Params0.instance.name = "semPower";
+Program.global.semPower = Semaphore.create(1, semaphore5Params0);
+var semaphore6Params0 = new Semaphore.Params();
+semaphore6Params0.instance.name = "semPlot";
+Program.global.semPlot = Semaphore.create(1, semaphore6Params0);
