--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -557,6 +557,7 @@ Program.global.UIHwi = halHwi.create(33, "&TouchScreenIntHandler", halHwi0Params
 var task0Params = new Task.Params();
 task0Params.instance.name = "UItask";
 task0Params.priority = 5;
+task0Params.stackSize = 1024;
 Program.global.UItask = Task.create("&UiStart", task0Params);
 var task1Params = new Task.Params();
 task1Params.instance.name = "TimeTask";
@@ -627,3 +628,12 @@ Program.global.semPower = Semaphore.create(1, semaphore5Params0);
 var semaphore6Params0 = new Semaphore.Params();
 semaphore6Params0.instance.name = "semPlot";
 Program.global.semPlot = Semaphore.create(1, semaphore6Params0);
+var semaphore7Params0 = new Semaphore.Params();
+semaphore7Params0.instance.name = "semRPM";
+Program.global.semRPM = Semaphore.create(1, semaphore7Params0);
+var semaphore8Params = new Semaphore.Params();
+semaphore8Params.instance.name = "semLUX";
+Program.global.semLUX = Semaphore.create(1, semaphore8Params);
+var semaphore9Params = new Semaphore.Params();
+semaphore9Params.instance.name = "semTEMP";
+Program.global.semTEMP = Semaphore.create(1, semaphore9Params);
