Accel and I2C working again (No Motor System Test)

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -637,3 +637,7 @@ Program.global.semLUX = Semaphore.create(1, semaphore8Params);
 var semaphore9Params = new Semaphore.Params();
 semaphore9Params.instance.name = "semTEMP";
 Program.global.semTEMP = Semaphore.create(1, semaphore9Params);
+var task7Params = new Task.Params();
+task7Params.instance.name = "BMI160Read";
+task7Params.stackSize = 1024;
+Program.global.BMI160Read = Task.create("&readBMI160", task7Params);
