Added Accel Graphing

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -641,3 +641,6 @@ var task7Params = new Task.Params();
 task7Params.instance.name = "BMI160Read";
 task7Params.stackSize = 1024;
 Program.global.BMI160Read = Task.create("&readBMI160", task7Params);
+var semaphore10Params = new Semaphore.Params();
+semaphore10Params.instance.name = "semACCEL";
+Program.global.semACCEL = Semaphore.create(1, semaphore10Params);
