Basic EStop, no motor

--- a/VehicleMotorSystem/VehicleMotorSystem.cfg
+++ b/VehicleMotorSystem/VehicleMotorSystem.cfg
@@ -644,3 +644,9 @@ Program.global.BMI160Read = Task.create("&readBMI160", task7Params);
 var semaphore10Params = new Semaphore.Params();
 semaphore10Params.instance.name = "semACCEL";
 Program.global.semACCEL = Semaphore.create(1, semaphore10Params);
+var swi1Params = new Swi.Params();
+swi1Params.instance.name = "EStop";
+Program.global.EStop = Swi.create("&SWI_EStop", swi1Params);
+var semaphore11Params = new Semaphore.Params();
+semaphore11Params.instance.name = "semScreenInit";
+Program.global.semScreenInit = Semaphore.create(null, semaphore11Params);
